Prepare for pub.dev publication
- Update README.md with comprehensive documentation
- Add proper MIT License
- Update pubspec.yaml with publication metadata
- Update CHANGELOG.md for v0.1.0
- Fix lint warnings for pub.dev validation
- Add .pubignore to exclude development files
- Remove unnecessary library declaration
- Fix HTML in documentation comments

Ready for initial release to pub.dev

'
q
:q
'

--- a/android/build.gradle
+++ b/android/build.gradle
@@ -56,6 +56,11 @@ android {
         implementation("org.eclipse.jetty:jetty-http:9.4.54.v20240208")
         implementation("org.eclipse.jetty:jetty-io:9.4.54.v20240208")
         implementation("org.eclipse.jetty:jetty-util:9.4.54.v20240208")
+        
+        // Kotlin Coroutines
+        implementation("org.jetbrains.kotlinx:kotlinx-coroutines-android:1.7.3")
+        implementation("org.jetbrains.kotlinx:kotlinx-coroutines-core:1.7.3")
+        
         testImplementation("org.jetbrains.kotlin:kotlin-test")
         testImplementation("org.mockito:mockito-core:5.0.0")
     }
