--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,21 @@
 name: media_cast_dlna
-description: "A new Flutter plugin project."
-version: 0.0.1
-homepage:
+description: A powerful Flutter plugin for discovering and controlling DLNA/UPnP media devices. Cast your media to smart TVs, speakers, and other DLNA-enabled devices with ease! Built with Pigeon for type-safe native interfaces.
+version: 0.1.0
+homepage: https://github.com/felnanuke2/media_cast_dlna
+repository: https://github.com/felnanuke2/media_cast_dlna
+issue_tracker: https://github.com/felnanuke2/media_cast_dlna/issues
+documentation: https://github.com/felnanuke2/media_cast_dlna#readme
+
+topics:
+  - dlna
+  - upnp
+  - media-casting
+  - media-renderer
+  - media-server
+  - pigeon
+
+platforms:
+  android:
 
 environment:
   sdk: ^3.8.1
