Add DLNA-enabled devices ecosystem section to README

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,10 +12,10 @@ topics:
   - media-casting
   - media-renderer
   - media-server
-  - pigeon
 
 platforms:
   android:
+  ios:
 
 environment:
   sdk: ^3.8.1
