--- a/example/android/app/src/main/AndroidManifest.xml
+++ b/example/android/app/src/main/AndroidManifest.xml
@@ -7,7 +7,7 @@
     <uses-permission android:name="android.permission.CHANGE_WIFI_MULTICAST_STATE" />
     
     <application
-        android:label="media_cast_dlna_example"
+        android:label="@string/app_name"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
         <activity
@@ -39,7 +39,8 @@
             android:value="2" />
         
         <!-- Required service for JUPnP Android UPnP functionality -->
-        <service android:name="org.jupnp.android.AndroidUpnpServiceImpl"/>
+        <service android:name="org.jupnp.android.AndroidUpnpServiceImpl"
+                 android:exported="false" />
     </application>
     <!-- Required to query activities that can process text, see:
          https://developer.android.com/training/package-visibility and
