--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: media_cast_dlna
-description: A powerful Flutter plugin for discovering and controlling DLNA/UPnP media devices. Cast your media to smart TVs, speakers, and other DLNA-enabled devices with ease! Built with Pigeon for type-safe native interfaces.
-version: 0.1.3
+description: A Flutter plugin for discovering and controlling DLNA/UPnP media devices. Cast media to smart TVs and speakers with ease!
+version: 0.2.0
 homepage: https://github.com/felnanuke2/media_cast_dlna
 repository: https://github.com/felnanuke2/media_cast_dlna
 issue_tracker: https://github.com/felnanuke2/media_cast_dlna/issues
@@ -11,7 +11,6 @@ topics:
   - upnp
   - media-casting
   - media-renderer
-  - media-server
 
 platforms:
   android:
